--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp-etl-tap-csv",
+  "name": "gulp-etl-target-csv",
   "version": "1.0.0",
-  "repository": "https://github.com/gulpetl/gulp-etl-tap-csv",
+  "repository": "https://github.com/gulpetl/gulp-etl-target-csv",
   "description": "Convert CSV files to JSON compatible with gulp-etl",
   "main": "dist/js/plugin.js",
   "typings": "dist/types/plugin.d.ts",
@@ -15,12 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parse": "^4.4.1",
+    "csv-stringify": "^5.3.0",
     "from2": "^2.3.0",
     "gulp-error-handle": "^1.0.1",
     "loglevel": "^1.6.1",
     "pkginfo": "^0.4.1",
     "plugin-error": "^1.0.1",
+    "split2": "^3.1.1",
     "through2": "^3.0.1",
     "vinyl": "^2.2.0"
   },
