--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-rename": "^1.4.0",
     "jest": "^24.7.1",
     "jest-spec-reporter": "^1.0.5",
+    "stream-transform": "^2.0.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^7.0.1",
     "typescript": "^3.4.5"
