--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-etl-target-csv",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "repository": "https://github.com/gulpetl/gulp-etl-target-csv",
   "description": "Convert CSV files to JSON compatible with gulp-etl",
   "main": "dist/js/plugin.js",
@@ -21,31 +21,26 @@
   ],
   "homepage": "https://gulpetl.com",
   "dependencies": {
-    "csv-stringify": "^5.3.0",
-    "from2": "^2.3.0",
+    "csv-stringify": "^5.3.3",
     "gulp-error-handle": "^1.0.1",
-    "loglevel": "^1.6.1",
+    "loglevel": "^1.6.4",
     "pkginfo": "^0.4.1",
     "plugin-error": "^1.0.1",
+    "replace-ext": "^1.0.0",
     "split2": "^3.1.1",
     "through2": "^3.0.1",
     "vinyl": "^2.2.0"
   },
   "devDependencies": {
-    "@types/del": "^4.0.0",
-    "@types/gulp-rename": "0.0.33",
     "@types/jest": "^23.3.14",
-    "@types/loglevel": "^1.5.4",
-    "@types/node": "^10.14.6",
+    "@types/node": "^10.14.20",
+    "@types/replace-ext": "0.0.27",
     "@types/vinyl": "^2.0.3",
-    "@types/vinyl-paths": "0.0.31",
-    "gulp": "^4.0.1",
-    "gulp-rename": "^1.4.0",
-    "jest": "^24.7.1",
-    "jest-spec-reporter": "^1.0.5",
-    "stream-transform": "^2.0.0",
-    "ts-jest": "^24.0.2",
+    "gulp": "^4.0.2",
+    "jest": "^24.9.0",
+    "stream-transform": "^2.0.1",
+    "ts-jest": "^24.1.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.6.3"
   }
 }
