--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gulp-etl-target-csv",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "repository": "https://github.com/gulpetl/gulp-etl-target-csv",
-  "description": "Convert CSV files to JSON compatible with gulp-etl",
+  "description": "Convert .ndjson gulp-etl files to CSV",
   "main": "dist/js/plugin.js",
   "typings": "dist/types/plugin.d.ts",
   "files": [
@@ -17,30 +17,32 @@
   "keywords": [
     "gulpplugin",
     "csv",
-    "gulp-etl"
+    "gulp-etl",
+    "data"
   ],
   "homepage": "https://gulpetl.com",
   "dependencies": {
-    "csv-stringify": "^5.3.3",
+    "csv-stringify": "^5.6.5",
     "gulp-error-handle": "^1.0.1",
-    "loglevel": "^1.6.4",
+    "loglevel": "^1.8.1",
+    "merge": "^2.1.1",
     "pkginfo": "^0.4.1",
     "plugin-error": "^1.0.1",
-    "replace-ext": "^1.0.0",
-    "split2": "^3.1.1",
-    "through2": "^3.0.1",
-    "vinyl": "^2.2.0"
+    "replace-ext": "^1.0.1",
+    "split2": "^3.2.2",
+    "through2": "^3.0.2",
+    "vinyl": "^2.2.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.14",
-    "@types/node": "^10.14.20",
+    "@types/node": "^10.17.60",
     "@types/replace-ext": "0.0.27",
-    "@types/vinyl": "^2.0.3",
+    "@types/vinyl": "^2.0.8",
     "gulp": "^4.0.2",
     "jest": "^24.9.0",
-    "stream-transform": "^2.0.1",
-    "ts-jest": "^24.1.0",
+    "stream-transform": "^2.1.3",
+    "ts-jest": "^24.3.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.6.3"
+    "typescript": "^5.2.2"
   }
 }
