Cleanup, streamline, clarify

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,28 +47,17 @@
             "env": {"DEBUG_LEVEL":"debug"}
         },
         {
-            "name": "csvStringifyWithoutGulp",
+            "name": "runWithoutGulp",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
             "stopOnEntry": false,
-            "args": ["--gulpfile", "./debug/gulpfile.ts", "csvStringifyWithoutGulp"],
+            "args": ["./debug/runWithoutGulp.ts"],
             "cwd": "${workspaceRoot}",
             "runtimeArgs": [
                 "--nolazy", "-r", "ts-node/register"
             ],
             "console": "internalConsole",
             "env": {"DEBUG_LEVEL":"info"}
-        },
-        {
-            "name": "aws-doParse: debug TS w/o transpile using ts-node",
-            "type": "node",
-            "request": "launch",
-            "args": ["src/aws/dev-handler.ts"],
-            "runtimeArgs": ["-r", "ts-node/register"],
-            "cwd": "${workspaceRoot}",
-            "protocol": "inspector",
-            "internalConsoleOptions": "openOnSessionStart",
-        },
+        }
     ]
 }
