--- a/package.json
+++ b/package.json
@@ -45,12 +45,21 @@
     "@types/jest": "^23.3.14",
     "@types/node": "^10.17.60",
     "@types/replace-ext": "0.0.27",
-    "@types/vinyl": "^2.0.8",
+    "@types/vinyl": "^2.0.11",
     "gulp": "^4.0.2",
     "jest": "^24.9.0",
     "stream-transform": "^2.1.3",
     "ts-jest": "^24.3.0",
     "ts-node": "^7.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "node-notifier@<8.0.1": ">=8.0.1",
+      "yargs-parser@>=6.0.0 <13.1.2": ">=13.1.2",
+      "jsdom@<=16.4.0": ">=16.5.0",
+      "glob-parent@<5.1.2": ">=5.1.2",
+      "tough-cookie@<4.1.3": ">=4.1.3"
+    }
   }
 }
