--- a/package.json
+++ b/package.json
@@ -33,29 +33,28 @@
   },
   "homepage": "https://docs.gulpetl.com",
   "dependencies": {
-    "csv-stringify": "^5.6.5",
-    "gulp-error-handle": "^1.0.1",
+    "csv-stringify": "^6.4.5",
     "loglevel": "^1.8.1",
     "merge": "^2.1.1",
     "pkginfo": "^0.4.1",
-    "plugin-error": "^1.0.1",
-    "replace-ext": "^1.0.1",
-    "split2": "^3.2.2",
-    "through2": "^3.0.2",
-    "vinyl": "^2.2.1"
+    "plugin-error": "^2.0.1",
+    "replace-ext": "^2.0.0",
+    "split2": "^4.2.0",
+    "stream-transform": "^3.3.0",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.17",
-    "@types/jest": "^23.3.14",
-    "@types/node": "^10.17.60",
-    "@types/replace-ext": "0.0.27",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^14.18.63",
+    "@types/replace-ext": "2.0.2",
     "@types/vinyl": "^2.0.11",
     "gulp": "^4.0.2",
-    "jest": "^24.9.0",
-    "stream-transform": "^2.1.3",
-    "ts-jest": "^24.3.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^5.3.2"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vinyl": "^3.0.0"
   },
   "pnpm": {
     "overrides": {
