--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "homepage": "https://docs.gulpetl.com",
   "dependencies": {
+    "@gulpetl/node-red-core": "^0.0.7",
     "csv-stringify": "^6.4.5",
     "loglevel": "^1.8.1",
-    "merge": "^2.1.1",
     "pkginfo": "^0.4.1",
     "plugin-error": "^2.0.1",
     "replace-ext": "^2.0.0",
