--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-etl-target-csv",
   "version": "1.0.11",
   "repository": "https://github.com/gulpetl/gulp-etl-target-csv",
-  "description": "Convert .ndjson gulp-etl files to CSV",
+  "description": "Convert .jsonl gulp-etl files to CSV",
   "main": "dist/js/plugin.js",
   "typings": "dist/types/plugin.d.ts",
   "files": [
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "tsc && tsc --module commonjs --outDir dist/lib",
     "prebuild": "npm run clean",
-    "clean": "rimraf dist/*",
+    "clean": "rimraf --glob dist/*",
     "bump": "npm version patch && git push --tags origin master",
     "test": "jest"
   },
@@ -33,28 +33,29 @@
   },
   "homepage": "https://docs.gulpetl.com",
   "dependencies": {
-    "@gulpetl/node-red-core": "^0.0.9",
-    "csv-stringify": "^6.4.5",
-    "loglevel": "^1.8.1",
+    "@gulpetl/node-red-core": "^0.0.10",
+    "csv-stringify": "^6.5.2",
+    "loglevel": "^1.9.2",
     "pkginfo": "^0.4.1",
     "plugin-error": "^2.0.1",
     "replace-ext": "^2.0.0",
     "split2": "^4.2.0",
-    "stream-transform": "^3.3.0",
+    "stream-transform": "^3.3.3",
     "through2": "^4.0.2"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.17",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "^14.18.63",
     "@types/replace-ext": "2.0.2",
-    "@types/vinyl": "^2.0.11",
+    "@types/vinyl": "^2.0.12",
     "gulp": "^4.0.2",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vinyl": "^3.0.0"
+    "typescript": "^5.8.3",
+    "vinyl": "^3.0.1"
   },
   "pnpm": {
     "overrides": {
