--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://docs.gulpetl.com",
   "dependencies": {
-    "@gulpetl/node-red-core": "^0.0.10",
+    "@gulpetl/node-red-core": "^0.0.11",
     "csv-stringify": "^6.5.2",
     "loglevel": "^1.9.2",
     "pkginfo": "^0.4.1",
@@ -45,12 +45,13 @@
   },
   "devDependencies": {
     "@types/gulp": "^4.0.17",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^14.18.63",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.3",
     "@types/replace-ext": "2.0.2",
     "@types/vinyl": "^2.0.12",
-    "gulp": "^4.0.2",
-    "jest": "^29.7.0",
+    "gulp": "^5.0.1",
+    "gulp-data": "^1.3.1",
+    "jest": "^30.0.2",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
